--- a/views/plantilla/BOOSTRAP GARCIA CONDORI, Diner/login.html
+++ b/views/plantilla/BOOSTRAP GARCIA CONDORI, Diner/login.html
@@ -203,7 +203,7 @@ form {
             <img src="https://i.pinimg.com/564x/15/f3/b1/15f3b1dd58c05f61a2f4f1bbe85e9e33.jpg" alt="Descripción de la imagen" class="imagen-pequena">  
     
             <h2>BIENVENIDOS DE VUELTA</h2>
-            <form action="<?php echo BASE_URL ?>inicio">
+            <form action="index.html">
                 <div class="input-group">
                     <label for="usuario">USUARIO:</label>
                     <input type="text" id="usuario" name="usuario" required>
@@ -218,7 +218,7 @@ form {
                 </div>
                 <button type="submit">INICIAR SESIÓN</button><br>
                 <a href="contraseña.html" class="forgot-password">¿Olvidaste tu contraseña?</a>
-                <p class="no-cuenta">¿TODAVÍA NO TIENES UNA CUENTA? <a href="<?php echo BASE_URL ?>registrate">REGISTRARSE</a></p>
+                <p class="no-cuenta">¿TODAVÍA NO TIENES UNA CUENTA? <a href="registrarse.html">REGISTRARSE</a></p>
             </form>
         </div>
     </div>
@@ -226,5 +226,3 @@ form {
     
 </body>
 </html>
-
-
