--- a/views/plantilla/BOOSTRAP GARCIA CONDORI, Diner/index.html
+++ b/views/plantilla/BOOSTRAP GARCIA CONDORI, Diner/index.html
@@ -160,7 +160,7 @@ background: #5ea7f5;
           <a class="nav-link dropdown-toggle" href="index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> CALZADOS </a> 
           <ul class="dropdown-menu"> <li><a class="dropdown-item" href="DAMAS.HTML">DAMAS</a>
           </li> 
-          <li><a class="dropdown-item" href="<?php echo BASE_URL ?>">CABALLEROS</a>
+          <li><a class="dropdown-item" href="?php echo BASE_URL ?>">CABALLEROS</a>
           </li> 
           <li><a class="dropdown-item" href="NIÑOS.HTML">NIÑOS</a>
           </li> 
